--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -55,9 +55,9 @@
    <widget class="QGroupBox" name="groupBoxSaida">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>300</y>
-      <width>211</width>
+      <x>40</x>
+      <y>290</y>
+      <width>201</width>
       <height>151</height>
      </rect>
     </property>
@@ -174,7 +174,7 @@
      <rect>
       <x>40</x>
       <y>80</y>
-      <width>381</width>
+      <width>391</width>
       <height>191</height>
      </rect>
     </property>
@@ -308,7 +308,7 @@
     <widget class="QSplitter" name="splitter_2">
      <property name="geometry">
       <rect>
-       <x>210</x>
+       <x>220</x>
        <y>40</y>
        <width>151</width>
        <height>131</height>
@@ -510,6 +510,42 @@
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
+     <widget class="QWidget" name="layoutWidget">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>170</y>
+        <width>211</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QLabel" name="label_7">
+         <property name="text">
+          <string>Tanque 1 :</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_altura">
+         <property name="text">
+          <string>0</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_9">
+         <property name="text">
+          <string>cm</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
     </widget>
    </widget>
    <widget class="QSplitter" name="splitter">
@@ -538,43 +574,7 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>460</y>
-      <width>211</width>
-      <height>19</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="horizontalLayout">
-     <item>
-      <widget class="QLabel" name="label_7">
-       <property name="text">
-        <string>Tanque 1 :</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_altura">
-       <property name="text">
-        <string>0</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_9">
-       <property name="text">
-        <string>cm</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
-   <widget class="QWidget" name="layoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>270</x>
+      <x>260</x>
       <y>310</y>
       <width>159</width>
       <height>25</height>
@@ -609,7 +609,7 @@
    <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
-      <x>270</x>
+      <x>260</x>
       <y>340</y>
       <width>161</width>
       <height>101</height>
@@ -841,7 +841,7 @@
       <x>500</x>
       <y>450</y>
       <width>661</width>
-      <height>191</height>
+      <height>221</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -859,45 +859,53 @@
        <x>0</x>
        <y>0</y>
        <width>661</width>
-       <height>191</height>
+       <height>221</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true"/>
      </property>
     </widget>
+    <widget class="QWidget" name="layoutWidget_2">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>200</y>
+       <width>211</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="label_17">
+        <property name="text">
+         <string>Tanque 2 :</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_altura_2">
+        <property name="text">
+         <string>0</string>
+        </property>
+        <property name="alignment">
+         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="label_18">
+        <property name="text">
+         <string>cm</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
+    <zorder>plotS2</zorder>
+    <zorder>label_18</zorder>
+    <zorder>layoutWidget_2</zorder>
    </widget>
-   <zorder>layoutWidget</zorder>
-   <zorder>radioButtonMalhaAberta</zorder>
-   <zorder>radioButtonMalhaFechada</zorder>
-   <zorder>groupBoxSaida</zorder>
-   <zorder>label_4</zorder>
-   <zorder>groupBoxEntrada</zorder>
-   <zorder>plotS1</zorder>
-   <zorder>splitter</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>layoutWidget</zorder>
-   <zorder>groupBox</zorder>
-   <zorder>frame</zorder>
-   <zorder>frame_3</zorder>
-  </widget>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1200</width>
-     <height>22</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
