--- a/LabControle1/mainwindow.ui
+++ b/LabControle1/mainwindow.ui
@@ -70,7 +70,7 @@
     <property name="title">
      <string>Canais de Saida</string>
     </property>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>21</x>
@@ -445,9 +445,9 @@
     <property name="geometry">
      <rect>
       <x>500</x>
-      <y>250</y>
+      <y>70</y>
       <width>661</width>
-      <height>191</height>
+      <height>261</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -459,7 +459,7 @@
        <x>0</x>
        <y>0</y>
        <width>661</width>
-       <height>191</height>
+       <height>261</height>
       </rect>
      </property>
      <property name="styleSheet">
@@ -475,7 +475,7 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>170</y>
+        <y>240</y>
         <width>211</width>
         <height>21</height>
        </rect>
@@ -507,7 +507,51 @@
        </item>
       </layout>
      </widget>
+     <widget class="QWidget" name="layoutWidget_2">
+      <property name="geometry">
+       <rect>
+        <x>450</x>
+        <y>240</y>
+        <width>211</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <widget class="QLabel" name="label_17">
+         <property name="text">
+          <string>Tanque 2 :</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_altura_2">
+         <property name="text">
+          <string>0</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_18">
+         <property name="text">
+          <string>cm</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </widget>
+     <zorder>layoutWidget</zorder>
+     <zorder>label_18</zorder>
+     <zorder>label_altura_2</zorder>
+     <zorder>label_17</zorder>
+     <zorder>layoutWidget_2</zorder>
     </widget>
+    <zorder>frame_2</zorder>
+    <zorder>layoutWidget</zorder>
+    <zorder>layoutWidget_2</zorder>
    </widget>
    <widget class="QSplitter" name="splitter">
     <property name="geometry">
@@ -675,45 +719,13 @@
      </property>
     </widget>
    </widget>
-   <widget class="QFrame" name="frame">
-    <property name="geometry">
-     <rect>
-      <x>500</x>
-      <y>50</y>
-      <width>661</width>
-      <height>191</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border: 1px solid black</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
-    </property>
-    <widget class="QCustomPlot" name="customPlot" native="true">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>0</y>
-       <width>661</width>
-       <height>191</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true"/>
-     </property>
-    </widget>
-   </widget>
    <widget class="QFrame" name="frame_3">
     <property name="geometry">
      <rect>
       <x>500</x>
-      <y>450</y>
+      <y>360</y>
       <width>661</width>
-      <height>221</height>
+      <height>311</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -731,48 +743,34 @@
        <x>0</x>
        <y>0</y>
        <width>661</width>
-       <height>221</height>
+       <height>311</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true"/>
      </property>
-    </widget>
-    <widget class="QWidget" name="layoutWidget_2">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>200</y>
-       <width>211</width>
-       <height>21</height>
-      </rect>
-     </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
-      <item>
-       <widget class="QLabel" name="label_17">
-        <property name="text">
-         <string>Tanque 2 :</string>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_altura_2">
-        <property name="text">
-         <string>0</string>
-        </property>
-        <property name="alignment">
-         <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QLabel" name="label_18">
-        <property name="text">
-         <string>cm</string>
-        </property>
-       </widget>
-      </item>
-     </layout>
+     <widget class="QFrame" name="frame_4">
+      <property name="geometry">
+       <rect>
+        <x>0</x>
+        <y>0</y>
+        <width>661</width>
+        <height>311</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">border: 1px solid black</string>
+      </property>
+      <property name="frameShape">
+       <enum>QFrame::StyledPanel</enum>
+      </property>
+      <property name="frameShadow">
+       <enum>QFrame::Raised</enum>
+      </property>
+     </widget>
+     <zorder>layoutWidget</zorder>
+     <zorder>layoutWidget_2</zorder>
+     <zorder>frame_4</zorder>
     </widget>
    </widget>
    <widget class="QTabWidget" name="tabWidget">
@@ -880,7 +878,7 @@
        </item>
       </layout>
      </widget>
-     <widget class="QWidget" name="">
+     <widget class="QWidget" name="layoutWidget">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -1093,9 +1091,6 @@
    <zorder>splitter</zorder>
    <zorder>groupBox</zorder>
    <zorder>tabWidget</zorder>
-   <zorder>label</zorder>
-   <zorder>comboBoxTipodeControle</zorder>
-   <zorder>frame</zorder>
    <zorder>frame_3</zorder>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
